# archsteer

./: .gitignore  .mcp.json  LICENSE  README.md  glama.json  pyproject.toml  server.json
.archsteer/: architecture.md  architecture.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
archsteer/: __init__.py  cli.py  docs.py  mcp_server.py  report.py  steer.py  workspace.py
archsteer/engine/: __init__.py  baseline.py  conformance.py  decisions.py  evolution.py  intent.py  mapper.py  model.py  parser.py  security.py
archsteer/packs/express_to_next/: architecture.yaml
archsteer/packs/express_to_next/adr/: 0001-repository-pattern.md  0002-nextjs-route-handlers.md  0003-security-baseline.md
archsteer/packs/java_spring/: architecture.yaml
archsteer/packs/java_spring/adr/: 0001-repository-pattern.md  0002-thin-controllers.md  0003-security-baseline.md
archsteer/packs/nextjs_app_router/: architecture.yaml
archsteer/packs/nextjs_app_router/adr/: 0001-data-access-boundary.md  0002-external-calls-in-lib.md  0003-security-baseline.md
archsteer/packs/python_service/: architecture.yaml
archsteer/packs/python_service/adr/: 0001-repository-pattern.md  0002-security-baseline.md
archsteer/packs/salesforce/: architecture.yaml
archsteer/packs/salesforce/adr/: 0001-selector-layer.md  0002-one-trigger-per-object.md  0003-security-baseline.md
commands/: check.md  xray.md
docs/: mcp-listing.md
examples/ci/: archsteer.yml
examples/demo-repo/: package.json
examples/demo-repo/src/controllers/: payment_controller.js
examples/demo-repo/src/repositories/: user_repository.js
examples/demo-repo/src/routes/: users.js
examples/demo-repo/src/services/: user_service.js
examples/hooks/: pre-commit
skills/architecture-governance/: SKILL.md
tests/: test_engine.py
